[gd_scene load_steps=15 format=3 uid="uid://dl2ed4gkybgg2"]

[ext_resource type="Script" uid="uid://rb3oig3hnpnj" path="res://scripts/fps_player.gd" id="1_ffboj"]
[ext_resource type="Resource" uid="uid://cu2gtxlcmbb34" path="res://weapons/blaster-repeater.tres" id="2_6epbw"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://sprites/blob_shadow.png" id="2_b0fo8"]
[ext_resource type="Script" uid="uid://cuhqd7mkk0rda" path="res://scripts/weapon.gd" id="2_i825w"]
[ext_resource type="Resource" uid="uid://c56y8pqoyk15f" path="res://weapons/blaster.tres" id="3_kr4p8"]
[ext_resource type="SpriteFrames" uid="uid://dbv3sy5qjatnl" path="res://sprites/burst_animation.tres" id="4_m6ukc"]
[ext_resource type="Environment" uid="uid://bqnqgflivjvue" path="res://scenes/main-environment.tres" id="5_sk6nt"]
[ext_resource type="PackedScene" uid="uid://c0e27836xgmhi" path="res://objects/character.tscn" id="8_bv10t"]
[ext_resource type="ArrayMesh" uid="uid://deu06eho4c74" path="res://meshes/dust.res" id="9_ehlg1"]
[ext_resource type="AudioStream" uid="uid://e532kioqwfvt" path="res://sounds/walking_fps.ogg" id="10_ehlg1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.3
height = 1.0

[sub_resource type="World3D" id="World3D_ehlg1"]
environment = ExtResource("5_sk6nt")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_73nro"]
diffuse_mode = 2
specular_mode = 2
metallic_specular = 0.0
backlight = Color(0, 0.521569, 0.709804, 1)
billboard_keep_scale = true
grow_amount = 1.882
proximity_fade_distance = 0.25

[sub_resource type="Curve" id="Curve_4lapl"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.249284, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="FPSPlayer" type="CharacterBody3D" node_paths=PackedStringArray("sound_footsteps") groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_ffboj")
sound_footsteps = NodePath("SoundFootsteps")
weapons = Array[ExtResource("2_i825w")]([ExtResource("3_kr4p8"), ExtResource("2_6epbw")])

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.415815, -0.324014)
cull_mask = 1048573
current = true
fov = 80.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/Camera/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_ehlg1")
transparent_bg = true
handle_input_locally = false
msaa_3d = 1
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="CameraItem" type="Camera3D" parent="Head/Camera/SubViewportContainer/SubViewport"]
cull_mask = 1047554
fov = 40.0

[node name="Container" type="Node3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -1, -2.25)

[node name="Muzzle" type="AnimatedSprite3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -0.75, -6)
layers = 2
sprite_frames = ExtResource("4_m6ukc")
frame = 2

[node name="RayCast" type="RayCast3D" parent="Head/Camera"]
exclude_parent = false
target_position = Vector3(0, 0, -20)
collide_with_areas = true

[node name="Character" parent="." instance=ExtResource("8_bv10t")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Shadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
size = Vector3(1, 2, 1)
texture_albedo = ExtResource("2_b0fo8")
modulate = Color(1, 1, 1, 0.705882)
normal_fade = 0.5

[node name="ParticlesTrail" type="CPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_73nro")
cast_shadow = 0
amount = 60
mesh = ExtResource("9_ehlg1")
emission_shape = 1
emission_sphere_radius = 0.2
particle_flag_align_y = true
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0.1, 0)
scale_amount_min = 0.75
scale_amount_curve = SubResource("Curve_4lapl")

[node name="SoundFootsteps" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
stream = ExtResource("10_ehlg1")
volume_db = -5.0
autoplay = true

[node name="SoundFootsteps_og" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
pitch_scale = 1.25
autoplay = true

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[editable path="Character"]
